# top

./: Cargo.toml  README.md
examples/axum/: Cargo.toml
examples/axum/src/: main.rs  temp.rs
top/: Cargo.toml
top/src/: event.rs  id.rs  lib.rs  prelude.rs  tune.rs
top/src/component/: event.rs  html.rs  icon.rs  id.rs  mod.rs
top/src/editor/: choice.rs  container.rs  convert.rs  editor.rs  from.rs  generic.rs  mod.rs  primitive.rs  tuple.rs
top/src/html/: button.rs  div.rs  event.rs  icon.rs  id.rs  input.rs  mod.rs  radio.rs  span.rs  tag.rs
top/src/integration/: axum.rs
top/src/share/: guard.rs  map.rs  mod.rs  option.rs  primitive.rs  shared.rs  value.rs  vec.rs
top/src/task/: inspect.rs  interact.rs  interaction.rs  mod.rs  parallel.rs  sequential.rs  tune.rs
top/src/task/combinator/: step.rs
top/src/task/edit/: choice.rs  container.rs  convert.rs  edit.rs  edit_shared.rs  form.rs  generic.rs  mod.rs  option.rs  tuple.rs  value.rs  vec.rs
top/src/task/view/: convert.rs  display.rs  generic.rs  mod.rs  option.rs  value.rs  vec.rs  view.rs  view_shared.rs
top/src/viewer/: convert.rs  generic.rs  mod.rs  primitive.rs  viewer.rs
top_derive/: Cargo.toml
top_derive/src/: html.rs  lib.rs
toprs/: Cargo.toml
toprs/src/: lib.rs  prelude.rs  task.rs
toprs/src/component/: event.rs  html.rs  mod.rs
toprs/src/editor/: container.rs  event.rs  generic.rs  mod.rs  primitive.rs  tuple.rs
toprs/src/integration/: axum.rs  mod.rs
toprs/src/task/: combinator.rs  interaction.rs  mod.rs  value.rs
toprs/src/task/combinator/: step.rs
toprs_derive/: Cargo.toml
toprs_derive/src/: lib.rs
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: index.hbs  index.html  top.ts
web/src/component/: button.hbs  checkbox.hbs  group.hbs  input.hbs  radio_group.hbs  textfield.hbs
web/src/icon/: minus.hbs
web/src/static/: top.ts  toprs.ts
web/src/template/: button.hbs  checkbox.hbs  div.hbs  icon_button.hbs  index.hbs  input.hbs  plus.hbs  radio_group.hbs
