[package]
name = "top"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum_integration = ["axum", "futures", "tower-http", "tower-service"]

[dependencies]
async-trait = "0.1.52"
either = "1.6"
lazy_static = "1.4"
log = "0.4.14"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12"
thiserror = "1.0"
top_derive = { path = "../top_derive" }
uuid = { version = "1.1.0", features = ["fast-rng", "serde", "v4"] }

# Axum integration
axum = { version = "0.4.8", features = ["ws"], optional = true }
futures = { version = "0.3.21", optional = true }
tower-http = { version = "0.2.0", features = ["fs", "trace"], optional = true }
tower-service = { version = "0.3.1", optional = true }
