[package]
name = "toprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.2"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
toprs_derive = { path = "../toprs_derive" }

axum = { version = "0.4.5", optional = true }
http-body = "0.4.4"
