[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.5", features = ["ws"] }
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toprs = { path = "../../toprs", features = ["axum"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
