[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.5" }
env_logger = "0.8"
log = "0.4"
tokio = { version = "1", features = ["full"] }
top = { path = "../../top", features = ["axum_integration"] }
uwuify = "0.2.2"
