[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13" }
env_logger = "0.9.0"
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1", features = ["full"] }
top = { path = "../../top" }
